tests/baselines/reference/parser509669.errors.txt
parser509669.ts(2,17): error TS1005: '=>' expected.


==== parser509669.ts (1 errors) ====
    function foo():any {
     return ():void {};
                    ~
!!! error TS1005: '=>' expected.
    }